2005-03-23  Lluis Sanchez Gual <lluis@novell.com>

	* Control.cs: Added a new internal property: HasRenderMethodDelegate.
	* HtmlTextWriterAttribute.cs: Replaced wrong enum value.
	* HtmlTextWriter.cs: Register new ASP.NET 2.0 attributes

2005-03-16  Lluis Sanchez Gual  <lluis@novell.com>

	* ClientScriptManager.cs: Fix build.

2005-03-11  Lluis Sanchez Gual <lluis@novell.com>

	* Utils.cs, Control.cs: Don't use Page.GetPostBackClientEvent
	since it is deprecated in 2.0.
	* Page.cs: Deprecated GetPostBackClientEvent and similar methods
	in 2.0. Moved callback management methods to ClientScriptManager.
	* ClientScriptManager.cs: Moved here deprecated methods from Page.
	In GetPostBackEventReference (PostBackOptions), don't use the
	WebForm_DoPostback script if the post can be done with a simple
	__doPostBack call.
	* PostBackOptions.cs: Fixed default values for some properties.

2005-03-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: in FindControl, throw if there's more than one control
	with the same ID. Fixes bug #73479.

2005-03-04  Lluis Sanchez Gual <lluis@novell.com>

	* Page.cs: Load control state before loading view state, and the
	same for saving.
	* DataSourceSelectArguments.cs: Fix recursive property call.

2005-02-25  Lluis Sanchez Gual <lluis@novell.com>

	* DataSourceView.cs: Fixed incorrect implementation of
	RaiseUnsupportedCapabilityError.
	* IDataItemContainer.cs: Added new properties.
	* Page.cs: Implemented Form property.
	* Control.cs: Fixed formatting.
	* StateManagedCollection.cs: Track view state of items loaded
	in LoadViewState.

2005-02-22  Lluis Sanchez Gual <lluis@novell.com>

	* FilterableAttribute.cs: Fix endless loop.

2005-02-18  Lluis Sanchez Gual <lluis@novell.com>

	* Page.cs: Implemented missing events.

2005-02-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BoundPropertyEntry.cs:
	* PropertyEntry.cs:
	* TwoWayBoundPropertyEntry.cs: implemented.

2005-02-10  Lluis Sanchez Gual <lluis@novell.com>
