@@ -36,7 +36,6 @@ namespace System.Web.UI
 	public interface ITextControl
 	{
 		string Text { get; set; }
-		event EventHandler TextChanged;
 	}
 }
 #endif
